# ChangeLog for dev-python/phylter
# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*phylter-0.2.1 (09 Jan 2016)

  09 Jan 2016; Johann Schmitz <ercpe@gentoo.org> +phylter-0.2.1.ebuild,
  -phylter-0.2.ebuild:
  dev-python/phylter: Version bump (bugfix)

*phylter-0.2 (09 Jan 2016)

  09 Jan 2016; Johann Schmitz <ercpe@gentoo.org> +phylter-0.2.ebuild,
  -phylter-0.1.ebuild:
  dev-python/phylter: Version bump to 0.2

*phylter-0.1 (04 Jan 2016)

  04 Jan 2016; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +phylter-0.1.ebuild:
  dev-python/phylter: New ebuild