@@ -2,6 +2,9 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  13 Feb 2016; Johann Schmitz <ercpe@gentoo.org> phylter-0.2.1.ebuild:
+  dev-python/phylter: Added missing setuptools
+
 *phylter-0.2.1 (09 Jan 2016)
 
   09 Jan 2016; Johann Schmitz <ercpe@gentoo.org> +phylter-0.2.1.ebuild,
